# scclr

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
examples/: README.md  angelidis_pseudobulk_scclr.html  angelidis_pseudobulk_scclr.ipynb
python/scclr/: __init__.py  _func.py  pp.py  tl.py
src/: lib.rs
tests/: test_real_data.py  test_scclr.py
tests/data/: make_fixture.py  pbmc_subset.mtx
