[package]
name = "scclr"
version = "0.1.0"
edition = "2021"
description = "Single-cell shifted-CLR normalization + sparse PCA, a scverse drop-in (runorm + rupca)"
license = "BSD-2-Clause"

[lib]
# The Python extension module is `scclr._core`; the cdylib file is named after this lib.
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
runorm = { git = "https://github.com/cleartools/runorm", features = ["ruanndata"] }
# TODO: switch to the default branch once pachterlab/rupca#1 merges.
rupca = { git = "https://github.com/pachterlab/rupca", branch = "fix-dsapps-restart-convergence", features = ["ruanndata"] }
ruanndata = { git = "https://github.com/pachterlab/ruanndata" }
