[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "scclr"
version = "0.1.0"
description = "Single-cell shifted-CLR (PFlog1pPF) normalization + sparse PCA — a scverse drop-in"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
anndata = ["anndata"]
mudata = ["mudata==0.2.4", "anndata>=0.10.8,<0.10.9"]
scanpy = ["scanpy"]
test = ["pytest", "anndata>=0.10.8,<0.10.9", "mudata==0.2.4", "scanpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "scclr._core"
python-source = "python"
